--- a/package.json
+++ b/package.json
@@ -9,14 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/roboto": "^4.5.8",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
-    "eslint": "8.28.0",
-    "eslint-config-next": "13.0.5",
-    "next": "13.0.5",
+    "axios": "^1.1.3",
+    "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.2.3",
+    "eslint": "8.27.0",
+    "eslint-config-next": "13.0.4",
+    "jose": "^4.10.3",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.2",
+    "next": "13.0.4",
+    "next-auth": "^4.17.0",
     "react": "18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.39.5",
+    "react-intl": "^6.2.1",
+    "swr": "^1.3.0",
     "typescript": "4.9.3"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/js-cookie": "^3.0.2",
+    "sass": "^1.56.1"
   }
 }
