--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 HOST_NAME= http://localhost:3000/
+NEXTAUTH_URL=http://localhost/api/auth
 
 MONGO_URL= mongodb://localhost:27017/authentication
 
@@ -8,7 +9,6 @@ JWT_SECRET_SEED=EstoEsUnaSeedDeTokens@cjk
 
 GITHUB_ID=20180de683c7b30b3db7
 GITHUB_SECRET=a04364578c5d81a1ab6e930c4e933dee7c51f495
-
 NEXTAUTH_SECRET=EstoEsUnaSeedDeTokens@cjk
 
 # Cloudinary
