--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 HOST_NAME= http://localhost:3000/
-NEXTAUTH_URL=http://localhost/api/auth
+NEXTAUTH_URL=http://localhost:3000/api/auth
 
 MONGO_URL= mongodb://localhost:27017/authentication
-
+SECRET=EstoEsUnaSeedDeTokens@cjk
 NEXT_PUBLIC_TAX_RATE= 0.21
 
 JWT_SECRET_SEED=EstoEsUnaSeedDeTokens@cjk
