Upload Done Files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,16 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "baseUrl": "./",
+    "paths": {
+      "@/components/*": ["components/*"],
+      "@/pages/*": ["pages/*"],
+      "@/scss/*": ["scss/*"]
+    },
+    "types":["jest", "node"],
+    "typeRoots": ["next-auth.d.ts"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-auth.d.ts","next-env.d.ts", "**/*.spec.jsx","**/*.test.ts", "**/*.ts", "**/*.tsx","types.d.ts"],
   "exclude": ["node_modules"]
 }
