--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-HOST_NAME= http://localhost:3000/
-NEXTAUTH_URL=http://localhost:3000/api/auth
+
+NEXTAUTH_URL=http://localhost:3000
 
 MONGO_URL= mongodb://localhost:27017/authentication
 SECRET=EstoEsUnaSeedDeTokens@cjk
