--- a/package.json
+++ b/package.json
@@ -6,38 +6,50 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/enzyme": "^3.10.12",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/js-cookie": "^3.0.2",
     "@types/jsonwebtoken": "^8.5.9",
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
+    "@types/node": "^18.11.9",
+    "@types/react": "18.0.9",
     "@types/react-dom": "18.0.9",
     "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
+    "enzyme": "^3.11.0",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.4",
+    "identity-obj-proxy": "^3.0.0",
     "jose": "^4.10.3",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
-    "next": "13.0.4",
+    "next": "latest",
     "next-auth": "^4.17.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.5",
-    "react-intl": "^6.2.1",
     "swr": "^1.3.0",
-    "typescript": "4.9.3"
+    "ts-jest": "^29.0.3"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/js-cookie": "^3.0.2",
-    "sass": "^1.56.1"
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "13.2.0",
+    "@testing-library/user-event": "14.2.0",
+    "@types/jest": "^29.2.3",
+    "@types/react": "18.0.9",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
+    "jest": "28.1.0",
+    "jest-environment-jsdom": "28.1.0",
+    "jest-react-hooks-shallow": "^1.5.1",
+    "typescript": "4.6.4"
   }
 }
